Practica_6/iptables-rules_entrega1.txt
# Generated by iptables-save v1.4.14 on Mon Mar 23 18:52:05 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A FORWARD -m state --state RELATED -j ACCEPT
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -j LOG --log-prefix "IP Spoofing"
-A FORWARD ! -s 192.168.1.0/24 -i eth1 -j LOG --log-prefix "IP Spoofing"
-A FORWARD -s 192.168.1.0/24 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD ! -s 192.168.1.0/24 -i eth1 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i eth1 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.1.0/24 -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Mon Mar 23 18:52:05 2020
